[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "ezbolt"
version = "0.3.0"
authors = [
  { name="wcfrobert", email="temprobertdev@gmail.com" },
]
description = "ezbolt - bolt force calculations in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.0",
]
keywords = [
    "structural engineering",
    "bolt force",
    "steel connection",
    "instant center of rotation",
    "elastic method"
]



[project.urls]
"Homepage" = "https://github.com/wcfrobert/ezbolt"
"Bug Tracker" = "https://github.com/wcfrobert/ezbolt/issues"